# CssParser

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md  basic_elements.rb  complex_elements.rb  css_parser.pm  css_parser.py  css_parser.rb  css_parser_cli.py  css_parser_cli.rb  element.rb  main.c  test.pl  tests.py
css/: __init__.py  elements.py  errors.py  source.py
css_parser/: CMakeLists.txt  __init__.py  elements.h  elements.py  errors.py  main.c  source.py  tokens.h
css_parser/css/: CMakeLists.txt  elements.h  error.h  tokens.c  tokens.h
src/: CMakeLists.txt  elements.h  main.c  tokens.h
tests/: CMakeLists.txt  test_elements.c  test_elements.h  test_tokens.c  test_tokens.h  tests.c
universal_parser/: __init__.py
